--- a/index.html
+++ b/index.html
@@ -4,7 +4,89 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <title>Оно тебе надо</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="menu">
+        <ul class="header__menu">
+          <li class="menu__item"><a class="menu__link menu__active" href="#cover">главная</a></li>
+          <li class="menu__item marker__circle"><a class="menu__link" href="#lots">посмотреть лоты</a></li>
+          <li class="menu__item marker__circle"><a class="menu__link" href="#about">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a class="header__logo-link"  href="#0"><img class="header__logo" src="./images/logo-black.svg" alt="логотип с надписью оно тебе надо"></a>
+      <address class="address header__address">
+        <a class="menu__tel" href="tel:99995555555">+9 999 555 5555</a>
+        <a class="menu__email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="menu__addr">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section id="cover" class="cover">
+        <h1 class="cover__header">
+          <span class="cover__header-item">оно</span>
+          <span class="cover__header-item cover__header__center">тебе</span>
+          <span class="cover__header-item cover__header__right">надо</span>
+        </h1>
+        <div class="description">
+          <p class="description__text">аукцион вещей, в которые никто не верил</p>
+          <button class="description__button">сделать ставку</button>
+        </div>
+      </section>
+      <section id="lots" class="lots">
+        <h2 class="lots__header">лоты</h2>
+        <ul class="lots__items">
+          <li class="lots__item lots__item-image__overlay lots__item__film">
+            <a class="lots__item-link" href="#0">Фильм режиссёра, который бросил киношколу</a>
+            <article class="lots__item-article">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
+          </li>
+          <li class="lots__item lots__item-image__overlay lots__item__book">
+            <a class="lots__item-link" href="#0">Книга, где описан один скучный день из жизни рекламного агента</a>
+            <article class="lots__item-article">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
+          </li>
+          <li class="lots__item lots__item-image__overlay lots__item__picture">
+            <a class="lots__item-link" href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+            <article class="lots__item-article">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</article>
+          </li>
+        </ul>
+        <a class="lots__last-link" href="#0">посмотреть больше</a>
+      </section>
+      <section id="about" class="about">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="альтернативный логотип">
+        </div>
+        <div class="about__right-column">
+          <div class="about__header"><span>Об аукционе</span></div>
+          <div class="about__text">
+            <p class="about__text-paragraph margin__about__header">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p class="about__text-paragraph margin__between__paragraphs">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="address footer__address">
+        <a class="menu__tel" href="tel:99995555555">+9 999 555 5555</a>
+        <a class="menu__email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="menu__addr">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+      <nav class="menu">
+        <ul class="footer__menu">
+          <li class="menu__item"><a class="menu__active" href="#cover">главная</a></li>
+          <li class="menu__item"><a href="#lots">посмотреть лоты</a></li>
+          <li class="menu__item"><a href="@about">об аукционе</a></li>
+        </ul>
+      </nav>
+      <ul class="social__items">
+        <li class="social__item"><a class="youtube" href="#0"><img src="./images/yt.svg" alt="логотип youtube"></a></li>
+        <li class="social__item"><a class="vk" href="#0"><img src="./images/vk.svg" alt="логотип вконтакте"></a></li>
+        <li class="social__item"><a class="pinterest" href="#0"><img src="./images/pinterest.svg" alt="логотип pinterest"></a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
