--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </nav>
       <a class="header__logo-link"  href="#0"><img class="header__logo" src="./images/logo-black.svg" alt="логотип с надписью оно тебе надо"></a>
       <address class="address header__address">
-        <a class="address__tel link__general" href="tel:99995555555">+9 999 555 5555</a>
-        <a class="address__email link__general" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="link__general" href="tel:99995555555">+9 999 555 5555</a>
+        <a class="link__general" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="address__addr">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
@@ -41,19 +41,19 @@
         <h2 class="lots__header">лоты</h2>
         <ul class="lots__items">
           <li class="lots__item lots__item__film">
-            <a class="lots__item-link image__overlay href="#0">
+            <a class="lots__item-link image__overlay" href="#0">
               <h3 class="lots__item-head">Фильм режиссёра, который бросил киношколу</h3>
               <p class="lots__item-article">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
             </a>
           </li>
           <li class="lots__item lots__item__book">
-            <a class="lots__item-link image__overlay href="#0">
+            <a class="lots__item-link image__overlay" href="#0">
               <h3 class="lots__item-head">Книга, где описан один скучный день из жизни рекламного агента</h3>
               <p class="lots__item-article">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
             </a>
           </li>
           <li class="lots__item lots__item__picture">
-            <a class="lots__item-link image__overlay href="#0">
+            <a class="lots__item-link image__overlay" href="#0">
               <h3 class="lots__item-head">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
               <p class="lots__item-article">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
             </a>
@@ -77,8 +77,8 @@
     </main>
     <footer class="footer">
       <address class="address footer__address">
-        <a class="address__tel link__general" href="tel:99995555555">+9 999 555 5555</a>
-        <a class="address__email link__general" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="link__general" href="tel:99995555555">+9 999 555 5555</a>
+        <a class="link__general" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="address__addr">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="menu">
